--- a/src/main/resources/templates/board/addBoard.html
+++ b/src/main/resources/templates/board/addBoard.html
@@ -1,44 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h1>board List</h1>
-    <input type="text" id="boardTitle" />
-    <input type="text" id="boardContent" />
-    <input type="button" value="SAVE" id="addBtn" />
-
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script>
-        let addBtn = document.getElementById("addBtn");
-        let boardTitle = document.getElementById("boardTitle");
-        let boardContent = document.getElementById("boardContent");
-
-        // 버튼 클릭 이벤트 핸들러
-        addBtn.addEventListener("click", function () {
-            addBoard();
-        });
-
-        // 엔터 키 이벤트 핸들러
-        document.addEventListener("keydown", function (event) {
-            if (event.keyCode === 13) {
-                addBoard();
-            }
-        });
-        function addBoard() {
-            let param = { title: boardTitle.value, content: boardContent.value }; // 객체
-            axios.post("/addBoard", param)
-                .then(function (response) {
-                    if (response != null) {
-                        alert("success");
-                        location.href = "/boardList";
-                    }
-                    console.log(response);
-                });
-        }
-    </script>
-
-</body>
+<html>
+<h1>board List</h1>
+<input type="text" id="boardTitle" />
+<input type="text" id="boardContent" />
+<input type="button" value="SAVE" id="addBtn" />
 </html>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script>
+    let addBtn = document.getElementById("addBtn");
+    let boardTitle = document.getElementById("boardTitle");
+    let boardContent = document.getElementById("boardContent");
+
+    // 버튼 클릭 이벤트 핸들러
+    addBtn.addEventListener("click", function () {
+        saveBoard();
+    });
+
+    // 엔터 키 이벤트 핸들러
+    document.addEventListener("keydown", function (event) {
+        if (event.keyCode === 13) {
+            saveBoard();
+        }
+    });
+
+    function saveBoard() {
+        let param = { title: boardTitle.value, content: boardContent.value }; // 객체
+        axios.post("/addBoard", param)
+            .then(function (response) {
+                if (response != null) {
+                    alert("success");
+                    location.href = "/boardList";
+                }
+                console.log(response);
+            });
+    }
+</script>
