--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -38,7 +38,7 @@
                             <div>
                                 <p id="boardComment"></p>
                                 <textarea id="commentInput" rows="3" cols="30" placeholder="댓글을 입력하세요"></textarea>
-                                <button id="commentSubmit">등록</button>
+                                <button id="commentBtn">등록</button>
                             </div>
                         </div>
                     </div>
@@ -56,7 +56,7 @@
             <script>
                 let boardArea = document.getElementById('boardArea');
                 let commentInput = document.getElementById('commentInput');
-                let commentSubmit = document.getElementById('commentSubmit');
+                let commentBtn = document.getElementById('commentBtn');
                 let boardComment = document.getElementById('boardComment');
 
                 // 클릭 이벤트 리스너 등록
@@ -99,12 +99,12 @@
                 //댓글 이벤트
 
                 //댓글 창 클릭 이벤트 핸들러
-                commentSubmit.addEventListener('click', function() {
+                commentBtn.addEventListener('click', function() {
                     saveComment();
                 });
 
                 //댓글 엔터 키 이벤트 핸들러
-                commentSubmit.addEventListener("keydown", function (event) {
+                document.addEventListener("keydown", function (event) {
                     if (event.keyCode === 13) {
                         saveComment();
                     }
@@ -122,7 +122,7 @@
 
                                 alert("success");
 
-                                location.href = window.location.href; // 현재 페이지의 URL로 이동
+                                // location.href = window.location.href; // 현재 페이지의 URL로 이동
                                 boardComment.textContent = param;
 
                                 commentInput.value = '';
