--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -13,9 +13,9 @@
     <button style="float: right;" onclick="location.href='/addBoard'">AddBoard</button >
     <p></p><p></p>
     <hr>
-    <ul id="boardArea">
+    <ul >
         <h3 th:each="boardList : ${boardLists}">
-            <span class="board-title" th:text="${boardList.title}" th:attr="data-id=${boardList.id}"></span>
+            <span id="boardArea" class="board-title" th:text="${boardList.title}" th:attr="data-id=${boardList.id}"></span>
         </h3>
     </ul>
     <!-- Bootstrap Modal -->
@@ -72,9 +72,11 @@
                     axios.post(`/board/view/${currentBoardId}`)
                         .then((res) => {
                             console.log(res);
+                          //  debugger
 
                             // 게시글정보는 res에있으니까
                             // 그걸 이제 모달에 넣어주면되겠지.
+                           // debugger
                             showBoardModal(res.data.title,res.data.content,res.data.comment);
                         });
                     // if (target.classList.contains('board-title')) {
@@ -94,22 +96,22 @@
                     let modalContent = document.getElementById('boardContent');
                     modalTitle.textContent = title;
                     modalContent.textContent = content;
-                    commentList(comment);
-                    debugger
+                    boardComment.textContent = '';
+                    for(let i = 0; i < comment.length; i++) {
+                        commentList(comment[i]);
+                    }
+                   // debugger
                     $(boardModal).modal('show');
                     //comment List 호출
                 }
 
 
                 //현재의 boardid의 댓글(comment) 리스트를 불러오기
-                function commentList(comment){
-                    debugger
-                    let commentList = "";
+                function commentList(comment){  //변수가들어가
 
-                    for(let i = 0; i < comment.length; i++) {
-                        commentList += `<div class> <span> <b>${comment[i].content}</b></span></div>`;
-                    }
-                    boardComment.insertAdjacentHTML("beforeend", commentList);
+                    // 공백으로실행해서 comment가 undefined로 에러발생.
+                    let commentList = `<div class> <span> <b>${comment.content}</b></span></div>`;
+                    boardComment.insertAdjacentHTML("afterend", commentList);
                 }
 
 
@@ -120,6 +122,7 @@
                 document.addEventListener("keydown", function(event) {
                     if (event.keyCode === 13) {
                         saveComment();
+                        // commentList() // 공백으로 실행 하니까
                     }
                 });
 
@@ -135,11 +138,15 @@
                                 console.log(res.data.content);
 
                                 alert("success");
-
                                 // location.href = window.location.href; // 현재 페이지의 URL로 이동
-                                boardComment.textContent = param.content;
 
+                                // 이거일단주석
+                               // boardComment.textContent = param.content ;
                                 comment.value = '';
+                                // 이렇게 할경우 comment는 document.getElementById(어쩌구 저쩌구 객체
+                                // 위에서처럼 res.data.comment 이런걸 넣어야되니까 이거겠지? 진짜 복붙을할거면 똑바로하고 이게왜인지
+                                // 이해를하고 해야지 ㅡㅡ 뭐 공부할맛도안나게무한반복이야
+                                commentList(res.data);
                                 console.log(res);
                             }
                         });
