--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -60,6 +60,9 @@
         let commentBtn = document.getElementById('commentBtn');
         let boardComment = document.getElementById('boardComment');
         let currentBoardId;
+        let boardArea = document.querySelector('.boardArea board-title');// 클래스가 "boardArea"인 첫 번째 요소 선택
+        let page = 1;
+        let isLoading = false;
 
         // getElemetById는 리턴을 HTMLElement 해당 객체로 단일객체이기떄문에 addEventListener이 먹는다.
         // 하지만 class 여러개에 이벤트를 걸어야할떈 HTMLCollectionOf 해당 객체 컬렉션으로 오기떄문에
@@ -161,6 +164,108 @@
                 }
             });
     }
+
+    // 스크롤 이벤트 리스너 등록
+    window.addEventListener('scroll', function() {
+        if (isLoading) return;
+        let scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
+        let windowHeight = window.innerHeight;
+        let documentHeight = document.documentElement.scrollHeight;
+        if (scrollTop + windowHeight >= documentHeight - 100) {
+            loadMoreData();
+        }
+    });
+    // 데이터 추가 로드
+    function loadMoreData() {
+        isLoading = true;
+        axios.get('/loadMore?page=' + page)
+            .then(function(response) {
+                let boardLists = response.data.boardLists;
+                if (boardLists.length > 0) {
+                    boardLists.forEach(function(board) {
+                        let tag = `<h3><span>${board.title}</span></h3>`;
+                        boardArea.insertAdjacentHTML('beforeend', tag);
+                    });
+                    page++;
+                }
+                isLoading = false;
+            })
+            .catch(function(error) {
+                console.log(error);
+                isLoading = false;
+            });
+    }
+
+
+        const log = console.log;
+
+        const getPhotos = page => {
+            const url = `https://jsonplaceholder.typicode.com/photos?_page=${page}&_limit=10`;
+            return fetch(url).then(response=>response.json());
+        }
+
+        const mapPhotos = photos => {
+            return photos.map(photo=>{
+                return {url: photo.thumbnailUrl}
+            })
+        }
+
+        const createImgElement = photo => {
+            const img = document.createElement("img");
+            img.src = photo.url;
+            return img;
+        }
+
+        const createPhotoElements = photos => {
+            return photos.map(createImgElement);
+        }
+
+        const appendPhotoElements = (photoElements, el) => {
+            return el?.append(...photoElements)
+        }
+
+        const pipe = (...fns) => (arg) =>
+            fns.reduce((result, fn)=> (fn instanceof Function ? result.then(fn):result),
+                Promise.resolve(arg)
+            );
+
+        const $ = el => document.querySelector(el);
+
+        const processPhotos = pipe(
+            getPhotos,
+            mapPhotos,
+            createPhotoElements,
+            (photoElements) => appendPhotoElements(photoElements, $("#photos"))
+        )
+
+        const getNextPhotos = (()=>{
+            let page = 1;
+            let isFetching = false;
+            return () => {
+                if(!isFetching){
+                    isFetching = true;
+                    const nextPage = ++page;
+                    processPhotos(nextPage).then(()=>{
+                        isFetching = false;
+                    })
+                }
+            }
+        })();
+
+        window.addEventListener("scroll", ()=>{
+            const scrollPos = window.innerHeight + window.scrollY;
+            const bodyHeight = document.body.offsetHeight;
+
+            if(scrollPos >= bodyHeight){
+                getNextPhotos();
+            }
+        })
+
+        processPhotos(1);
+
+
+
+
     </script>
 
     </body>
